Fixing Bug 195228:Cards have too much space on top
reduced the card padding by 20 px

--- a/src/Orchard.Web/Modules/Devoffice.GettingStarted/Styles/gettingStarted.css
+++ b/src/Orchard.Web/Modules/Devoffice.GettingStarted/Styles/gettingStarted.css
@@ -195,7 +195,7 @@ samp {
     background-color: white !important;
     margin-top: 20px;
     margin-bottom: 20px;
-    padding: 40px;
+    padding: 20px;
     border: 1px solid #ddd;
 }
 
